--- a/package.json
+++ b/package.json
@@ -10,10 +10,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~53.0.22",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.6"
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-picker/picker": "^2.11.2",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "axios": "^1.11.0",
+    "expo": "^54.0.8",
+    "expo-av": "~16.0.7",
+    "expo-image": "~3.0.8",
+    "expo-speech": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
+    "firebase": "^12.2.1",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
